Fix console entries whitespace

--- a/src/app/webapp-common/experiments/dumb/experiment-log-info/experiment-log-info.component.scss
+++ b/src/app/webapp-common/experiments/dumb/experiment-log-info/experiment-log-info.component.scss
@@ -32,7 +32,7 @@
       color: #FFFFFF;
       height: 25px;
       padding: 5px 0 0 190px;
-      white-space: nowrap;
+      white-space: pre;
       border-bottom: 1px solid transparent;
     }
 
